brat/test/golden/error/kvarnotfound.brat.golden
Error in test/golden/error/kvarnotfound.brat@FC {start = Pos {line = 2, col = 12}, end = Pos {line = 2, col = 13}}:
f = { x => y }
           ^

  y not found in kernel context

